--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@paypal/react-paypal-js": "^7.5.1",
+    "@react-pdf/renderer": "^2.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -15,6 +16,7 @@
     "axios": "^0.24.0",
     "braintree": "^3.8.0",
     "braintree-web": "^3.85.1",
+    "craco": "0.0.3",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +27,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.2"
+    "stream": "0.0.2",
+    "web-vitals": "^2.1.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
