[ADD] export bills as pdf

--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,40 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@paypal/react-paypal-js": "^7.5.1",
+    "@react-pdf/renderer": "^2.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "async_hooks": "^1.0.0",
     "axios": "^0.24.0",
     "braintree": "^3.8.0",
     "braintree-web": "^3.85.1",
+    "buffer": "^6.0.3",
+    "craco": "0.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
+    "errors": "^0.3.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "jspdf": "^2.5.0",
+    "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-csv": "^2.0.0",
     "react-json-excel": "^1.1.0",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-pdf": "^5.6.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.2"
+    "stream": "0.0.2",
+    "util": "^0.12.4",
+    "validators": "^0.3.1",
+    "web-vitals": "^2.1.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
