--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-pdf": "^5.6.0",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
